--- a/zerodha.html
+++ b/zerodha.html
@@ -22,19 +22,19 @@
         </div>
         <div>
             <ul class="nav-list">
-                <li>
+                <li class="when-small">
                     <a href="/"> SignUp </a>
                 </li>
-                <li>
+                <li class="when-small">
                     <a href="/"> About </a>
                 </li>
-                <li>
+                <li class="when-small">
                     <a href="/">Products</a>
                 </li>
-                <li>
+                <li class="when-small">
                     <a href="/">Pricing</a>
                 </li>
-                <li>
+                <li class="when-small">
                     <a href="/">Support</a>
                 </li>
                 <div class="menu-list">
