Added a hambubrger icon

--- a/zerodha.html
+++ b/zerodha.html
@@ -2,58 +2,51 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=\, initial-scale=1.0">
-    <link rel="stylesheet" href="./zerodha.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap" rel="stylesheet">
-    <title>Zerodha</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="zerodha.css" />
+    <title>ZERODHA</title>
 </head>
 
 <body>
-    <nav class="navbar">
-        <div class="nav-logo">
-            <a href="/">
-                <img src="./zeroda-logo.svg" alt="website logo" height="17" width="129.41">
-            </a>
+    <header>
+        <div class="heading">
+            <img src="./assets/zeroda-logo.svg" alt="ZERODHA" />
+            <nav>
+                <ul>
+                    <li>Signup</li>
+                    <li>About</li>
+                    <li>Products</li>
+                    <li>Pricing</li>
+                    <li>Support</li>
+                    <li id="navbar_menu">
+                    <div class="cursor-pointer" id="menu_btn" title="Menu">
+                        <i class="fa fa-bars"></i>
+                        <div id="nav-icon3">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                    </div>
+                    </div>
+                    </li>
+                    </div>
+                    </div>
+                </ul>
+            </nav>
         </div>
-        <div>
-            <ul class="nav-list">
-                <li class="when-small">
-                    <a href="/"> SignUp </a>
-                </li>
-                <li class="when-small">
-                    <a href="/"> About </a>
-                </li>
-                <li class="when-small">
-                    <a href="/">Products</a>
-                </li>
-                <li class="when-small">
-                    <a href="/">Pricing</a>
-                </li>
-                <li class="when-small">
-                    <a href="/">Support</a>
-                </li>
-                <div class="menu-list">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </ul>
-        </div>
-    </nav>
+    </header>
     <main>
-        <div class="main-image">
-            <img class="m-image" src="./landing-image.png" alt=" main image">
+        <div class="head-img">
+            <img src="./assets/landing-image.png" alt="img" />
         </div>
-        <div>
-            <h1> Invest in everything </h1>
-            <p> Online platform to invest in stocks, derivatives, mutual funds, and more </p>
-            <button class="p-btn"> Signup now </button>
-        </div>`
+        <h1>Invest in everything</h1>
+        <p>
+            Online platform to invest in stocks, derivatives, mutual funds, and more
+        </p>
+        <button>Sign up now</button>
     </main>
 </body>
 
