--- a/zerodha.html
+++ b/zerodha.html
@@ -21,19 +21,14 @@
                     <li>Products</li>
                     <li>Pricing</li>
                     <li>Support</li>
-                    <li id="navbar_menu">
-                    <div class="cursor-pointer" id="menu_btn" title="Menu">
+                    <li class="hamburger-icon">
                         <i class="fa fa-bars"></i>
-                        <div id="nav-icon3">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                    </div>
-                    </div>
+                        <a>
+                            <span id="hamburger-line-1"></span>
+                            <span id="hamburger-line-2"></span>
+                            <span id="hamburger-line-3"></span>
+                        </a>
                     </li>
-                    </div>
-                    </div>
                 </ul>
             </nav>
         </div>
