--- a/zerodha.html
+++ b/zerodha.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="heading">
-            <img src="./assets/zeroda-logo.svg" alt="ZERODHA" />
+            <img src="./assets/zeroda-logo.svg" alt="ZERODHA"/>
             <nav>
                 <ul>
                     <li>Signup</li>
@@ -21,14 +21,14 @@
                     <li>Products</li>
                     <li>Pricing</li>
                     <li>Support</li>
-                    <li class="hamburger-icon">
+                    <div class="hamburger-icon">
                         <i class="fa fa-bars"></i>
                         <a>
                             <span id="hamburger-line-1"></span>
                             <span id="hamburger-line-2"></span>
                             <span id="hamburger-line-3"></span>
                         </a>
-                    </li>
+                    </div>
                 </ul>
             </nav>
         </div>
